# VersaAssistant

./: CMakeLists.txt  README.md
Project/: CMakeLists.txt  imagesvgload.cpp  imagesvgload.h  main.cpp  versawidge.cpp  versawidge.h
QtAdvancedDocking/: AutoHideDockContainer.cpp  AutoHideDockContainer.h  AutoHideSideBar.cpp  AutoHideSideBar.h  AutoHideTab.cpp  AutoHideTab.h  CMakeLists.txt  DockAreaTabBar.cpp  DockAreaTabBar.h  DockAreaTitleBar.cpp  DockAreaTitleBar.h  DockAreaTitleBar_p.h  DockAreaWidget.cpp  DockAreaWidget.h  DockComponentsFactory.h  DockContainerWidget.cpp  DockContainerWidget.h  DockFocusController.cpp  DockFocusController.h  DockManager.cpp  DockManager.h  DockOverlay.h  DockSplitter.h  DockWidget.cpp  DockWidget.h  DockWidgetTab.cpp  DockWidgetTab.h  FloatingDockContainer.cpp  FloatingDockContainer.h  FloatingDragPreview.cpp  FloatingDragPreview.h  README.md  ResizeHandle.h  ads_globals.h
QtMaterial/: CMakeLists.txt  qtmaterialappbar.cpp  qtmaterialappbar.h  qtmaterialflatbutton.cpp  qtmaterialflatbutton.h  qtmaterialslider_internal.cpp
QtMaterial/lib/: qtmaterialtheme.cpp  qtmaterialtheme.h
icon/: IconPark.qrc  MingCute.qrc  qt_for_qrc.py
